--- a/DeviceLockController/AndroidManifest.xml
+++ b/DeviceLockController/AndroidManifest.xml
@@ -27,6 +27,7 @@
     <uses-permission android:name="android.permission.MANAGE_DEVICE_POLICY_APPS_CONTROL"/>
     <uses-permission android:name="android.permission.MANAGE_DEVICE_POLICY_CALLS"/>
     <uses-permission android:name="android.permission.MANAGE_DEVICE_POLICY_DEBUGGING_FEATURES"/>
+    <uses-permission android:name="android.permission.MANAGE_DEVICE_POLICY_INSTALL_UNKNOWN_SOURCES"/>
     <uses-permission android:name="android.permission.MANAGE_DEVICE_POLICY_LOCK_TASK"/>
     <uses-permission android:name="android.permission.MANAGE_DEVICE_POLICY_SAFE_BOOT"/>
     <uses-permission android:name="android.permission.MANAGE_DEVICE_POLICY_TIME"/>
