--- a/DeviceLockController/AndroidManifest.xml
+++ b/DeviceLockController/AndroidManifest.xml
@@ -32,6 +32,8 @@
     <uses-permission android:name="android.permission.MANAGE_DEVICE_POLICY_LOCK_TASK"/>
     <uses-permission android:name="android.permission.MANAGE_DEVICE_POLICY_SAFE_BOOT"/>
     <uses-permission android:name="android.permission.MANAGE_DEVICE_POLICY_TIME"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".DeviceLockControllerApplication"
