--- a/DeviceLockController/AndroidManifest.xml
+++ b/DeviceLockController/AndroidManifest.xml
@@ -34,6 +34,9 @@
     <uses-permission android:name="android.permission.MANAGE_DEVICE_POLICY_TIME"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+
+    <uses-permission android:name="com.android.permission.INSTALL_EXISTING_PACKAGES"/>
 
     <application
         android:name=".DeviceLockControllerApplication"
