Add the activity to be displayed when provisioning is in progress
More implementation details will be added later, this is a placeholder
for now.

Bug: 270710048
Bug: 275601532
Test: mm
Change-Id: I21c9b9aa80f991f1e740689647fe9bd7dffe2de3

--- a/DeviceLockController/AndroidManifest.xml
+++ b/DeviceLockController/AndroidManifest.xml
@@ -83,6 +83,10 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity-alias>
+        <activity
+            android:name="com.android.devicelockcontroller.activities.ProvisioningActivity"
+            android:theme="@style/Theme.Materialu"
+            android:exported="false"/>
         <service android:name="com.android.devicelockcontroller.DeviceLockControllerService"
                  android:directBootAware="true"
                  android:exported="false"
