--- a/DeviceLockController/src/com/android/devicelockcontroller/debug/AndroidManifest.xml
+++ b/DeviceLockController/src/com/android/devicelockcontroller/debug/AndroidManifest.xml
@@ -71,17 +71,22 @@
             tools:replace="android:exported" />
 
         <receiver
-            android:name="com.android.devicelockcontroller.receivers.CheckInBootCompletedReceiver"
+            android:name="com.android.devicelockcontroller.receivers.SingleUserBootCompletedReceiver"
             android:exported="true"
             tools:replace="android:exported" />
 
         <receiver
-            android:name="com.android.devicelockcontroller.receivers.LockTaskBootCompletedReceiver"
+            android:name="com.android.devicelockcontroller.receivers.BootCompletedReceiver"
             android:exported="true"
             tools:replace="android:exported" />
 
         <receiver
             android:name="com.android.devicelockcontroller.receivers.LockedBootCompletedReceiver"
+            android:exported="true"
+            tools:replace="android:exported" />
+
+        <receiver
+            android:name="com.android.devicelockcontroller.receivers.TimeChangedBroadcastReceiver"
             android:exported="true"
             tools:replace="android:exported" />
 
