--- a/DeviceLockController/src/com/android/devicelockcontroller/debug/AndroidManifest.xml
+++ b/DeviceLockController/src/com/android/devicelockcontroller/debug/AndroidManifest.xml
@@ -90,6 +90,11 @@
             android:exported="true"
             tools:replace="android:exported" />
 
+        <receiver
+            android:name="com.android.devicelockcontroller.receivers.ResumeProvisionReceiver"
+            android:exported="true"
+            tools:replace="android:exported" />
+
         <service
             android:name="com.android.devicelockcontroller.DeviceLockControllerService"
             android:exported="true"
